--- a/static/css/main.css
+++ b/static/css/main.css
@@ -1,58 +1,115 @@
 body {
-    
+    /* max-width: 1000px; */
+    min-width: 1000px;
+    min-height: 1000px;
+    overflow-x: hidden;
     height: 100vh;
     margin: 0;
-    background-color: orange;
-    /* background-image:
+    background-color: rgb(34, 66, 2);
+    /* background-image: */
 
-    linear-gradient(
+    /* linear-gradient(
                     rgba(0, 0, 0, 0), 
                     rgba(0, 0, 0, 0.9)
                 ), 
-         url('https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExaDJ2NmtvaDY2cmY2MGpqeTNxZ3pta3JwY3FneDhkZ3E4ZDlhYW5yNiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/X4fPTLm2TCtkNiJnhE/giphy.gif');
-    
-         background-size: cover; */
+         /* url('https://media1.giphy.com/media/v1.Y2lkPTc5MGI3NjExaDJ2NmtvaDY2cmY2MGpqeTNxZ3pta3JwY3FneDhkZ3E4ZDlhYW5yNiZlcD12MV9pbnRlcm5hbF9naWZfYnlfaWQmY3Q9Zw/X4fPTLm2TCtkNiJnhE/giphy.gif'); */
+            /* url(''); */
+         /* background-size: cover; */
     background-repeat: space;
     background-position: center center;
     background-attachment: fixed;
 }
 
+/* #daniel {
+    -webkit-mask-image: "{{ url_for('static', filename='imgs/green.png') }}";
+    mask-image: "{{ url_for('static', filename='imgs/green.png') }}";
+    mask-repeat: no-repeat;    
+} */
+
 /* Animations */
-@keyframes slide {
-    from {margin-left: -1000px;}
-    to {margin-left:0px;}
+@keyframes slide1 {
+    from {right: -10rem;}
+    to {right:0rem;}
 }
 
-#home {
-    animation-name: slide;
-    animation-duration: 1s;
+@keyframes slide2 {
+    from {right: -40rem;}
+    to {right:7rem;}
+}
+
+@keyframes fade {
+    from {opacity: 0%;}
+    to {opacity: 100%;}
+}
+
+@keyframes bigger {
+    from {height: 100%;}
+    to {height: 110%;}
+}
+
+@keyframes backnforth1 {
+    0% {
+        right: 0rem;
+    }
+    50% {
+        right: -3rem;
+    }
+    100% {
+        right: 0rem;
+    }
+}
+
+@keyframes backnforth2 {
+    0% {
+        right: 7rem;
+    }
+    50% {
+        right: 4rem;
+    }
+    100% {
+        right: 7rem;
+    }
+}
+
+#side_area {
+    animation-name: fade;
+    animation-duration: 2s;
 }
 
 #title {
-    font-size: 100px;
+    font-size: 9.5vh;
     /* margin-top: auto; */
-    margin-left: 5%;
-    margin-top: 10rem;
+    margin-left: 4rem;
+    margin-top: 11rem;
     /* padding-bottom: -10rem; */
     position: absolute;
     z-index: 1;
 }
 
+#title h1 {
+    text-shadow: 8px 8px rgba(0, 0, 0, 0.5);
+    margin-left: -0.5rem;
+}
+
 h1,h3,p {
     color: white;
     opacity: 100%;
-    /* font-family: "Manrope", serif;  */
-    font-family: "Alumni Sans Pinstripe", serif;
+    font-family: "Manrope", serif; 
+    /* font-family: "Alumni Sans Pinstripe", serif; */
 }
 
 #title p {
     margin-top: -10vh;
-    font-size: 30px;
-    max-width: 40rem;/
+    font-size: 3vh;
+    max-width: 40rem;
+    margin-left: 0rem;
     /* margin-bottom: 4vh; */
+    text-shadow: 2px 2px rgba(0, 0, 0, 0.5);
+
 }
 
 #title ul {
+    margin-top: -10px;
     padding-left: 0;
 }
 
@@ -62,18 +119,18 @@ h1,h3,p {
     float: left;
 }
 
-#title input[type=submit] {
+#title input[type=submit],#title a {
     /* background-color: black; */
     background-color: rgba(0,0,0,0);
     border-style: solid;
     border-color: white;
     border-radius: 10px;
     color: white;
-    padding: 16px 32px;
+    padding: 20px 40px;
     text-decoration: none;
     /* margin: 4px 2px; */
     cursor: pointer;
-    font-family: "Alumni Sans Pinstripe", serif; 
+    font-family: "Manrope", serif; 
     font-size: 25px;
     transition: all 400ms ease;
 
@@ -81,11 +138,11 @@ h1,h3,p {
     /* margin-right: 10px; */
 }
 
-#title input[type=submit]:hover{
+#title input[type=submit]:hover,#title a:hover{
     background-color: white;
     color: black;
     font-weight: bold;
-    padding: 17px 34px;
+    padding: 20px 44px;
     transition: all 400ms ease;
 }
 
@@ -99,11 +156,72 @@ h1,h3,p {
     float: left;
 }
 
+.scroll_indicator {
+    position: relative;
+    z-index: 10;
+}
+
+#background {
+    position: absolute;
+    z-index: 0;
+    right: 0px;
+    height: 100%;
+}
+
+#background1 {
+    /* float: right;
+    position: relative;
+    z-index: 9;
+    /* animation-name: slide1; */
+    /* animation-duration: 1s;  */
+    position: absolute;
+    right:0rem;
+    /* height: 90%; */
+    height: 100vh;
+    z-index: 1;
+    animation: slide1, backnforth1;
+    animation-duration: 1s, 3s;
+    animation-iteration-count: 1, infinite;
+    animation-delay: 0s, 1s;
+
+    /* animation-name: backnforth1;
+    animation-duration: 1s;
+    animation-iteration-count: infinite; */
+}
+
+#background2 {
+    
+    position: absolute;
+    right:7rem;
+    z-index: 0;
+    height: 100vh;
+    /* animation-name: slide2;
+    animation-duration: 1.5s; */
+    /* animation-delay: 0.5s; */
+
+    animation: slide2, backnforth2;
+    animation-duration: 1.5s, 3s;
+    animation-iteration-count: 1, infinite;
+    animation-delay: 0s, 1.5s;
+}
+
 #right_side {
     width: 50%;
     height: 100%;
-    float: left;
+    float: right;
+    position: relative;
+    z-index: 0;
     /* background-color: blue; */
+}
+
+#daniel {
+    margin-left: 3rem;
+    position: absolute;
+    z-index: 1;
+    margin-top: 10vh;
+    height: 80vh;
+    /* animation-name: bigger; */
+    /* animation-duration: 1s; */
 }
 
 /* #cv_container {
@@ -175,10 +293,10 @@ section{
 .scroll_indicator a::after {
     content: "";
     position: absolute;
-    width: 10px;
-    height: 10px;
+    width: 15px;
+    height: 15px;
     border-radius: 50%;
-    background-color: white;
+    background-color: rgb(10, 64, 0);
     top: 50%;
     left: 50%;
     transform: translate(-50%,-50%);
@@ -186,7 +304,7 @@ section{
 }
 
 .scroll_indicator a.active::after{
-    background: gold;
+    background: rgb(255, 255, 255);
     transform: translate(-50%,-50%) scale(1.3);
 }
 
@@ -198,7 +316,7 @@ section{
     transform: translate(4px, -50%);
     /* background: black; */
     /* background: linear-gradient(0.25turn, #000, (gold)); */
-    color: white;
+    color: rgb(0, 31, 0);
     font-family: "Manrope", serif; 
     font-weight: "bold";
     padding: 2px 16px;
