--- a/static/css/main.css
+++ b/static/css/main.css
@@ -266,6 +266,7 @@ h3,p {
     position: relative;
     z-index: 0;
     float: left;
+    margin-top: 150vh;
     /* height: 200vh; */
 /*     top: 150vh; */
 }
