Added about us section

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -694,6 +694,8 @@ section{
     position: absolute;
     margin-top: 10vh;
     margin-left: 10rem;
+    width: 53vh;
+    height: 10vh;
     animation-name: a1;
     animation-duration: 7s;
     animation-iteration-count: infinite;
@@ -703,6 +705,8 @@ section{
     position: absolute;
     margin-top: 15vh;
     margin-left: 13.5rem;
+    width: 53vh;
+    height: 10vh;
     animation-name: a2;
     animation-duration: 7s;
     animation-iteration-count: infinite;
